# N2SQL

./: .env.qdrant  .gitignore  ADVANCED_TESTING_README.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LOCAL_VANNA_SETUP.md  Makefile  README.md  REAL_SCHEMA_SOLUTION.md  advanced_test_suite.py  analyze_customer_journey.py  analyze_customer_storage.py  check_schema.py  docker-compose.yml  env.example  fix_local_qdrant.py  fix_qdrant_migration.py  fix_qdrant_schema_data.py  fix_rag_context_issue.py  fix_schema_mismatch.py  init.sql  inspect_qdrant_data.py  integrate_real_schema.py  migrate_to_docker_qdrant.py  pyproject.toml  real_schema_extractor.py  requirements.txt  run.py  run_advanced_tests.py  run_local_test.py  setup_qdrant_server.py  start_visual_tester.py  test_app_with_local_vanna.py  test_final_fix.py  test_improved_rag.py  test_sql_generation_issue.py  train_with_rag_context.py  vanna_visual_tester.py  verify_rag_fix.py  verify_schema_match.py  (+1 more)
app/: __init__.py  main.py
app/application/: __init__.py  use_cases.py
app/domain/: __init__.py  entities.py  repositories.py
app/infrastructure/: __init__.py  config.py  database.py  enhanced_rag_system.py  local_vanna_client.py  query_repository.py  vanna_client.py  vanna_factory.py
app/interface/: __init__.py  api.py  dto.py
examples/: __init__.py  demo.py
templates/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_domain.py
